2017-09-06  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/environment.py: Handle environment variables.

	Combine the classical CLI environment variable approach and
	the settings in the typhon configuration file.

	**Environment variables precede settings in the config file.**

	* doc/conf.py, doc/typhon.environment.rst:

	Added `typhon.environment` to documentation.

	* doc/modules.rst,
	  typhon/arts/workspace/__init__.py,
	  typhon/arts/workspace/api.py:

	Make use of constant variables  in `typhon.environment`
	instead of checking the environment.

2017-09-06  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/config.py (_Configurator):

	Cleaned the object implementation.

	* (_Configurator.__call__, get_config):

	Added a keyword argument to specify config section.

2017-09-04  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	Some smaller fixes for interactive python interface.

	* typhon/arts/workspace/agendas.py:
	- Decode error byte string returned by execute_controlfile to properly display
	ARTS error messages.

	* typhon/arts/workspace/methods.py:
	- Raise value error when group of generic input doesn't match the expected one.

	* typhon/arts/workspace/variables.py:
	- Update array interface when calling value on a WSV

2017-09-04  Lukas Kluft  <lukas.kluft@gmail.com>

	Added a function to plot a colorized series of bars.

	* typhon/plots/plots.py (colored_bars):

	Function to plot a colorized bar plot.

	* doc/typhon.plots.rst:

	Added `colored_bars` to documentation.

2017-08-30  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: Set DEVBUILD back to True after release.

2017-08-30  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: 0.4.0 Release.

	* doc/typhon.arts.workspace.rst:

	Reorder modules alphabetically and list their classes so they appear
	in the sphinx documentation.

	* typhon/arts/workspace/__init__.py, typhon/arts/workspace/agendas.py,
	typhon/arts/workspace/api.py, typhon/arts/workspace/methods.py,